--- a/.github/workflows/github-actions-wa-events.yml
+++ b/.github/workflows/github-actions-wa-events.yml
@@ -16,6 +16,6 @@ jobs:
           pip install -r requirements.txt
       
       - name: Run script
-        run: python my_script.py
+        run: python main.py
         env:
           API_KEY: ${{ secrets.API_KEY }}
