--- a/.github/workflows/github-actions-wa-events.yml
+++ b/.github/workflows/github-actions-wa-events.yml
@@ -1,21 +1,29 @@
+name: My Workflow
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   my_job:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-      
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      
+
       - name: Run script
         run: python main.py
         env:
           API_KEY: ${{ secrets.API_KEY }}
+
