--- a/.github/workflows/github-actions-wa-events.yml
+++ b/.github/workflows/github-actions-wa-events.yml
@@ -23,7 +23,6 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run script
-        run: python main.py
+        run: python my_script.py
         env:
           API_KEY: ${{ secrets.API_KEY }}
-
