--- a/.github/workflows/selenium_test.yaml
+++ b/.github/workflows/selenium_test.yaml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  second_job:
+  selenium-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
