--- a/.github/workflows/github-actions-wa-events.yml
+++ b/.github/workflows/github-actions-wa-events.yml
@@ -41,3 +41,5 @@ jobs:
         run: python main.py
         env:
           API_KEY: ${{ secrets.API_KEY }}
+          PCLOUD_ACCESS_TOKEN: ${{ secrets.PCLOUD_ACCESS_TOKEN }}
+          
