--- a/.github/workflows/github-actions-wa-events.yml
+++ b/.github/workflows/github-actions-wa-events.yml
@@ -41,5 +41,6 @@ jobs:
         run: python main.py
         env:
           API_KEY: ${{ secrets.API_KEY }}
-          PCLOUD_ACCESS_TOKEN: ${{ secrets.PCLOUD_ACCESS_TOKEN }}
+          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
           
