--- a/.github/workflows/github-actions-event-email.yml
+++ b/.github/workflows/github-actions-event-email.yml
@@ -41,5 +41,5 @@ jobs:
       - name: Run script
         run: python email_test.py
         env:
-          API_KEY: ${{ secrets.API_KEY }}
+          API_KEY: ${{ secrets.WA_API_KEY }}
           
