--- a/.github/workflows/github-actions-wa-events.yml
+++ b/.github/workflows/github-actions-wa-events.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Run script
         run: python main.py
         env:
-          API_KEY: ${{ secrets.WA_API_KEY }}
+          WA_API_KEY: ${{ secrets.WA_API_KEY }}
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
           
