--- a/.github/workflows/github-actions-event-email.yml
+++ b/.github/workflows/github-actions-event-email.yml
@@ -39,7 +39,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run script
-        run: python email_test.py
+        run: python email_events.py
         env:
           WA_API_KEY: ${{ secrets.WA_API_KEY }}
           
