--- a/.github/workflows/github-actions-wa-events.yml
+++ b/.github/workflows/github-actions-wa-events.yml
@@ -38,7 +38,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run script
-        run: python main.py
+        run: python update_ics.py
         env:
           WA_API_KEY: ${{ secrets.WA_API_KEY }}
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
