--- a/.github/workflows/github-actions-test-event-discord.yml
+++ b/.github/workflows/github-actions-test-event-discord.yml
@@ -36,7 +36,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run script
-        run: python discord_events_test.py
+        run: python discord_event_test.py
         env:
           DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
           SERVER_ID: ${{ secrets.SERVER_ID }}
