renamed variables, upload to aws and wa

--- a/.github/workflows/github-actions-wa-events.yml
+++ b/.github/workflows/github-actions-wa-events.yml
@@ -49,8 +49,6 @@ jobs:
         with:
           name: outputs
           path: |
-            redmountainmakers_events*.ics
-            wa_events.ics
-            rmm_events.ics
-            temp_event_update.log
-            bham365.csv
+            *.ics
+            *.log
+            *.csv
