Update ics host to wa (#1)
* First test

* Update github-actions-wa-events testing.yml

* Update github-actions-wa-events testing.yml

* .

* First test

* Update github-actions-wa-events testing.yml

* Update github-actions-wa-events testing.yml

* .

* refactor and simplify functions

* renamed variables, upload to aws and wa

* removed testing workflow

* updated README.md

* disable aws upload for testing

* Update error handling for download_ics_file

* Actually use the secret...

* enabled upload to aws for pull request.

---------

Co-authored-by: Creidhne86 <mcbehling86@gmail.com>

--- a/.github/workflows/github-actions-wa-events.yml
+++ b/.github/workflows/github-actions-wa-events.yml
@@ -43,4 +43,13 @@ jobs:
           WA_API_KEY: ${{ secrets.WA_API_KEY }}
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+          WA_BOT_ACCT_PW: ${{ secrets.WA_BOT_ACCT_PW }}
           
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: outputs
+          path: |
+            *.ics
+            *.log
+            *.csv
